<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash_background"
    app:layoutDescription="@xml/activity_my_profile_scene"
    tools:context=".View.Profile.MyProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button12"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-40dp"
            android:background="@drawable/grey_background"
            android:fontFamily="@font/poppins"
            android:text="Business Profile"
            android:textAllCaps="false"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-40dp"
            android:background="@drawable/green_background"
            android:fontFamily="@font/poppins"
            android:text="User Profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/back"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>










        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/linear" />


    <ImageView
        android:id="@+id/circle_progressview"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile"/>

    <ImageView
            android:id="@+id/imageView19"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/green_background"
            android:padding="5dp"
            android:src="@drawable/white_camera"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintEnd_toEndOf="@+id/img_profile" />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/green_background"
            android:padding="7dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/Heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text=""
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/imageView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/loremsmall"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />


        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14"
            app:srcCompat="@drawable/call" />

        <TextView
            android:id="@+id/tv_no"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:layout_constraintTop_toTopOf="@+id/imageView16" />

        <TextView
            android:id="@+id/textView54"
            style="@style/mediumbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10sp"
            android:text="Added Pet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />



        <TextView
            android:id="@+id/tv_seeall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/see_more"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView16" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/tv_nopet"
        style="@style/mediumbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="No Pet Added"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="@+id/recyclerview"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview"
        app:layout_constraintTop_toTopOf="@+id/recyclerview" />


    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:animateLayoutChanges="true"
            style="@style/tabBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview"
            app:tabBackground="@drawable/custom_tab_selector"
            app:tabGravity="fill"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/medium"
            app:tabTextColor="@color/tab_text_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Friends" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Request" />
        </com.google.android.material.tabs.TabLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_post"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_seeallpost"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <TextView
            android:id="@+id/tv_seeallpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/see_more"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_post" />


        <TextView
            android:id="@+id/tv_nopost"
            style="@style/mediumbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="No Post Added"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerview_post"
            app:layout_constraintEnd_toEndOf="@+id/recyclerview_post"
            app:layout_constraintStart_toStartOf="@+id/recyclerview_post"
            app:layout_constraintTop_toTopOf="@+id/recyclerview_post" />




</androidx.constraintlayout.motion.widget.MotionLayout>